--- a/core/build.gradle
+++ b/core/build.gradle
@@ -50,5 +50,6 @@ dependencies {
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
+    implementation "com.badlogicgames.gdx:gdx-tiledmap:1.10.0"
   }
 }
